--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.4",
+    "mongodb": "^6.2.0",
     "mongoose": "^7.5.3",
-    "next": "13.4.19",
+    "next": "^14.0.4",
     "next-auth": "^4.23.2",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "wouter": "^2.11.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "3.3.3"
   }
 }
