--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGODB_URI = mongodb+srv://johnsito161:195y2p4IKENeAm61@cluster0.dwotl3d.mongodb.net/?retryWrites=true&w=majority
 
-NEXTAUTH_URL = https://newspage-v2-ecglucso5-alanoxer.vercel.app
+NEXTAUTH_URL = https://newspage-v2-alanoxer.vercel.app/api/auth
 
 NEXTAUTH_SECRET = shalom
 
