--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.4",
+    "lucide-react": "^0.436.0",
     "mongodb": "^6.2.0",
     "mongoose": "^7.5.3",
     "next": "^14.0.4",
